@@ -1,3 +1,12 @@
+Tue Apr 20 17:49:15 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
+        
+          Disabled generation of implied IDL operations for facets
+          and receptacles if the underlying interface type is local.
+          Ports using local interfaces are used only by the
+          container, and not exposed to clients.
+
 Tue Apr 20 09:47:50 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/IDL3_Plus/KitchenSink.mpc:
